# goat

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: cargo.yml
src/: cli.rs  config.rs  github.rs  main.rs  util.rs
