[package]
name = "goat"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
colored = "2.0.0"
home = "0.5.4"
serde = { version = "1.0.145", features = ["serde_derive", "derive"] }
serde_derive = "1.0.145"
toml = "0.5.9"
